--- a/public/custom/client.css
+++ b/public/custom/client.css
@@ -66,12 +66,6 @@ a:hover {
     opacity: 1;
 }
 
-
-[data-feedback]:hover > [data-photo] > [data-full] {
-    cursor: pointer;
-    opacity: 1;
-}
-
 .bg-yellow {
     background-color: #ffff00;
 }
@@ -312,6 +306,39 @@ input[type=email]:focus
 #map-container {
     height: 100%!important;
 }
+
+.nav-tabs {
+    border: none!important;
+}
+
+.nav-tabs .nav-link, .nav-tabs .nav-item .nav-link {
+    color: #495057;
+    background-color: transparent!important;
+    border: 1px solid #495057;
+    border-radius: 0!important;
+}
+
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+     color: #495057;
+     background-color: yellow!important;
+     border: none!important;
+}
+
+#cardPay, #walletPay {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+[data-pay]{
+    transition: .3s ease-in-out;
+}
+
+[data-pay]:hover {
+    cursor: pointer;
+    color: #795057;
+}
+
 
 @media (min-width: 1366px) {
     .triatletizm {
